# learn-cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  learn_cpp_config.h.in  main.cpp  requirements.txt
chapter_1/: CMakeLists.txt  learn_1_11_program.h  learn_1_6_initialization.h  learn_1_6_test.cpp
chapter_1/src/: part_11_program.cpp  part_11_program.h  part_6_initialization.cpp  part_6_initialization.h
chapter_1/test/: part_11_test.cpp  part_6_test.cpp
chapter_2/: CMakeLists.txt
chapter_2/notes/: chapter_11.md  chapter_12.md
chapter_2/src/: summary.cpp  summary.h
chapter_2/test/: summary_test.cpp
chapter_3/note/: summary.txt
chapter_4/: CMakeLists.txt
chapter_4/note/: part_10_conversion.txt  part_11_char.txt  part_1_types.txt  part_6_fixed_width.txt  part_8_floats.txt  part_9_bool.txt
chapter_4/src/: part_12_conversion.cpp  part_12_conversion.h  summary.cpp  summary.h
chapter_4/test/: part_12_conversion_test.cpp  summary_test.cpp
chapter_5/: CMakeLists.txt
chapter_5/note/: part_1_consts.txt  part_5_const_expressions.txt  part_7_string.txt
chapter_5/src/: part_7_string.cpp  part_7_string.h  summary.cpp  summary.h
chapter_5/test/: part_7_string_test.cpp  summary_test.cpp
learn_1_11/: CMakeLists.txt  learn_1_11_program.cpp  learn_1_11_program.h  learn_1_11_test.cpp
learn_1_6/: CMakeLists.txt  learn_1_6_initialization.cpp  learn_1_6_initialization.h  learn_1_6_test.cpp  test.cpp
